[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/img_fundoChao.png" type="Texture" id=1]
[ext_resource path="res://assets/grave.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudoBate.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudoIdle.png" type="Texture" id=4]
[ext_resource path="res://scripts/Player.gd" type="Script" id=5]
[ext_resource path="res://scripts/Game.gd" type="Script" id=6]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Idle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attacking:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="GameNode" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 469.604, 614.978 )
scale = Vector2( 2.1189, 2.16514 )
texture = ExtResource( 1 )

[node name="Player" type="Node2D" parent="."]
position = Vector2( 220, 1070 )
script = ExtResource( 5 )

[node name="Idle" type="Sprite" parent="Player"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Attacking" type="Sprite" parent="Player"]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Dead" type="Sprite" parent="Player"]
visible = false
modulate = Color( 0.345098, 0.698039, 0.172549, 1 )
position = Vector2( -46, 40 )
scale = Vector2( 0.207, 0.145 )
texture = ExtResource( 2 )
flip_h = true

[node name="AttackAnimation" type="AnimationPlayer" parent="Player"]
anims/Attack = SubResource( 1 )

[node name="MainCamera" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="BarrelStack" type="Node2D" parent="."]

[node name="DestroyingBarrels" type="Node2D" parent="."]
